# houdini-multishot

./: .gitignore  CMakeLists.txt  package.py
hdas/backup/: top_bears.configuremultishot.1.0_bak11.hdanc  top_bears.configuremultishot.1.0_bak12.hdanc  top_bears.configuremultishot.1.0_bak2.hdanc  top_bears.configuremultishot.1.0_bak3.hdanc  top_bears.configuremultishot.1.0_bak5.hdanc  top_bears.configuremultishot.1.0_bak6.hdanc  top_bears.configuremultishot.1.0_bak7.hdanc
otls/: top_bears.configuremultishot.1.0.hdanc  top_mike.batch_render.1.0.hdanc
otls/backup/: top_bears.configuremultishot.1.0_bak1.hdanc  top_bears.configuremultishot.1.0_bak10.hdanc  top_bears.configuremultishot.1.0_bak13.hdanc  top_bears.configuremultishot.1.0_bak14.hdanc  top_bears.configuremultishot.1.0_bak15.hdanc  top_bears.configuremultishot.1.0_bak16.hdanc  top_bears.configuremultishot.1.0_bak17.hdanc  top_bears.configuremultishot.1.0_bak4.hdanc  top_bears.configuremultishot.1.0_bak8.hdanc  top_bears.configuremultishot.1.0_bak9.hdanc
python/multishot/: __init__.py
src/: expr.C  functions.C
